[tool.poetry]
name = "cxdupload"
version = "1.1.0"
description = "Multithreaded upload tool for Cisco TAC Cases via CXD"
authors = ["Chad A Simmons <chad.simmons@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.31"
humanfriendly = ">=10.0"
yaspin = ">=2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
